solved overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 
 
 ::selection{
-	background-color: #b75a64;
+	background-color: #f299a2;
 }
 :root {
 	--extra-large-fs: 9rem; /*144px; */
@@ -55,6 +55,7 @@ html {
 	width: 100%;
 	height: 100%;
 	background: var(--hero-white-color);
+	overflow-x: hidden;
 
 }
 
